--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,12 @@
   color: #fff;
   padding: 0.5rem 2rem;
 }
+.navbar i {
+  color: rgb(237, 29, 36);
+  font-size: 2em;
+  display: none;
+}
 .navigate {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,10 +41,10 @@
 }
 .logo {
   width: 25%;
-  height: 100%;
+  height: 10%;
 }
 .logo img {
-  width: 70%;
+  width: 7em;
   height: 100%;
 }
 .characters {
@@ -75,4 +79,94 @@
   font-size: 1.5rem;
   font-weight: 600;
   margin: 1rem 1rem;
+}
+.card p {
+  font-family: "Poppins", sans-serif;
+  margin: 1rem 1rem;
+}
+.slider {
+  width: 100%;
+  height: 50rem;
+  margin: 0.5rem 0;
+  border: none;
+}
+.slider img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.description {
+  height: 100vh;
+}
+.description-card {
+  margin: 0 auto;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.description-card img {
+  rotate: 20deg;
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+  object-position: center;
+  margin-right: 4rem;
+}
+.details h1 {
+  font-family: "Lexend", sans-serif;
+  font-size: 2rem;
+  font-weight: 600;
+  margin: 1rem 1rem;
+}
+.details p {
+  font-family: "Poppins", sans-serif;
+  margin: 1rem 1rem;
+}
+@media screen and (max-width: 1350px) {
+  .characters {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 900px) {
+  .characters {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .navbar a {
+    display: none;
+  }
+  .navbar i {
+    display: block;
+    cursor: pointer;
+  }
+}
+@media screen and (max-width: 600px) {
+  .characters {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .logo {
+    width: 50%;
+  }
+  .logo img {
+    width: 5em;
+  }
+  .description-card {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .description-card img {
+    margin: 0 auto;
+  }
+  .details h1 {
+    margin: 0;
+  }
+  .details p {
+    margin: 0;
+  }
 }
