--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap");
+@import "react-slideshow-image/dist/styles.css";
 
 * {
   margin: 0;
@@ -48,7 +49,7 @@
   height: 100%;
 }
 .characters {
-  margin: 10rem auto;
+  margin: 2rem auto;
   width: 80%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -86,7 +87,7 @@
 }
 .slider {
   width: 100%;
-  height: 50rem;
+  height: 35rem;
   margin: 0.5rem 0;
   border: none;
 }
@@ -112,6 +113,10 @@
   position: absolute;
   top: 1rem;
   right: 5rem;
+  cursor: pointer;
+}
+.description i:hover {
+  transition: 0.3s ease-out;
 }
 .description-card {
   margin: 0 auto;
